// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`/processor.js values should support local values in value composition 1`] = `
Object {
  "fooga": Array [
    "fooga",
  ],
}
`;

exports[`/processor.js values should support simple values 1`] = `
"/* values.css */
.a {
    color: red
}"
`;

exports[`/processor.js values should support value composition 1`] = `
"/* packages/core/test/specimens/values.css */
/* packages/core/test/specimens/value-composition.css */
.red {
    color: red
}"
`;

exports[`/processor.js values should support value namespaces 1`] = `
"/* packages/core/test/specimens/values.css */
/* packages/core/test/specimens/value-namespace.css */
.red {
    color: red
}
.blue {
    color: blue
}"
`;

exports[`/processor.js values should support value replacement in :external(...) 1`] = `
"/* packages/core/test/specimens/folder/folder.css */
.folder {
    margin: 2px
}
/* packages/core/test/specimens/simple.css */
.wooga {
    color: red
}
/* packages/core/test/specimens/local.css */
.booga {
    background: green
}
/* packages/core/test/specimens/externals.css */
.a .wooga {
    color: green
}
.b:hover .booga {
    background: blue
}"
`;
